...
        static let spacingForCoinData: CGFloat = 30
        static let imageFrame:CGFloat = 26
        static let coinImageLeadingPadding:CGFloat = 5
        static let textFieldWidth: CGFloat = 105
        static let buttonHeigh: CGFloat = 55
        
        static let currentPriceText = "Current Price:"
        static let coinHoldingsText = "Your holdings:"
        static let coinDepositText = "Your deposit:"
        static let defaultCoinDepositText = "$0.00"
        
        static let saveButtonTitleText = "Save"
        static let saveButtonUpdateTitleText = "UPDATED ✅"
    }
    
    private lazy var customSearchBar = CustomSearchBarView()
    private lazy var collectionView = UICollectionView()
    
...
    
    private lazy var coinImage: UIImageView = {
        let image = UIImageView()
        return image
    }()
    
    private lazy var coinsAmountTextField: UITextField = {
        let textField = UITextField()
        textField.accessibilityIdentifier = "coinsAmountTextField"
        textField.layer.cornerRadius = 10
        textField.layer.masksToBounds = true
        textField.keyboardType = .decimalPad
        textField.textAlignment = .right
...
